feat: 커스텀 에러 구현 및 핸들러 구현
