# docs/swagger/swagger.json
@@ -3,5 +3,81 @@
     "info": {
         "contact": {}
     },
-    "paths": {}
+    "paths": {
+        "/users": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "CreateUser ✅",
+                "responses": {
+                    "201": {
+                        "description": "회원가입에 성공한 사용자 정보",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.CreateUserRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "FindUserByMe ✅",
+                "responses": {
+                    "200": {
+                        "description": "내 정보 조회에 성공한 사용자 정보",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FindUserByMeResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "presenter.CreateUserRequest": {
+            "type": "object",
+            "required": [
+                "nickname"
+            ],
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "resolution": {
+                    "type": "string"
+                }
+            }
+        },
+        "presenter.FindUserByMeResponse": {
+            "type": "object",
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "resolution": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
